--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Reflux HTML CSS Template</title>
+    <title>James Data Analyst</title>
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
@@ -36,12 +36,12 @@ https://templatemo.com/tm-531-reflux
         <div id="menu" class="menu">
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
-            <div class="image">
-              <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
+            <div class="">
+              <a href="#"><img src="assets/images/jim.jpg" alt="" /></a>
             </div>
             <div class="author-content">
-              <h4>Reflux Me</h4>
-              <span>Web Designer</span>
+              <h4>James Ssekitoleko</h4>
+              <span>Data analyst</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
@@ -85,8 +85,7 @@ https://templatemo.com/tm-531-reflux
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <span
-              >This is a Bootstrap v4.2.1 CSS Template for you. Edit and use
-              this layout for your site. Updated on 21 May 2019 for repeated main menu HTML code.</span
+              >Data Analyst well versed in SQL, Python,R and Tableau</span
             >
           </div>
           <div class="left-image-post">
