--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ https://templatemo.com/tm-531-reflux
         <div id="menu" class="menu">
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
-            <div class="">
-              <a href="#"><img src="assets/images/jim.jpg" alt="" /></a>
+            <div  width="20px"  class="">
+              <a href="#"><img class="img-thumbnail" width="20px"  src="assets/images/avatar.png" alt="" /></a>
             </div>
             <div class="author-content">
               <h4>James Ssekitoleko</h4>
@@ -92,7 +92,7 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
-                  <img src="assets/images/left-image.jpg" alt="" />
+                  <img src="assets/images/analytics.jpg" alt="" />
                 </div>
               </div>
               <div class="col-md-6">
