--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ https://templatemo.com/tm-531-reflux
             <div class="col-md-6">
               <div class="service-item">
                 <div class="first-service-icon service-icon"></div>
-                <h4>HTML5 &amp; CSS3</h4>
+                <h4>SQL Operations</h4>
                 <p>
                   Phasellus non convallis dolor. Integer tempor hendrerit arcu
                   at bibendum. Sed ac ante non metus vehicula congue quis eget
@@ -165,7 +165,7 @@ https://templatemo.com/tm-531-reflux
             <div class="col-md-6">
               <div class="service-item">
                 <div class="second-service-icon service-icon"></div>
-                <h4>Creative Ideas</h4>
+                <h4>R Proggramming</h4>
                 <p>
                   Proin lacus massa, eleifend sed fermentum in, dignissim vel
                   metus. Nunc accumsan leo nec felis porttitor, ultricies
@@ -176,7 +176,7 @@ https://templatemo.com/tm-531-reflux
             <div class="col-md-6">
               <div class="service-item">
                 <div class="third-service-icon service-icon"></div>
-                <h4>Easy Customize</h4>
+                <h4>Tableau</h4>
                 <p>
                   Integer suscipit condimentum aliquet. Nam quis risus metus.
                   Nullam faucibus quam eget arcu pretium tincidunt. Nam libero
@@ -187,7 +187,7 @@ https://templatemo.com/tm-531-reflux
             <div class="col-md-6">
               <div class="service-item">
                 <div class="fourth-service-icon service-icon"></div>
-                <h4>Admin Dashboard</h4>
+                <h4>Excel Operations</h4>
                 <p>
                   Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
                   eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
