--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Reflux HTML CSS Template</h4>
+                  <h4>Caspstone Case study One</h4>
                   <p>
                     Donec tristique feugiat lacus, at sollicitudin nunc euismod
                     sed. Mauris viverra, erat non sagittis gravida, elit dui
@@ -116,7 +116,7 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-text">
-                  <h4>Sed sagittis rhoncus velit</h4>
+                  <h4>Caspstone Case study Two</h4>
                   <p>
                     Pellentesque habitant morbi tristique senectus et netus et
                     malesuada fames ac turpis egestas. Vestibulum fermentum
