--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ https://templatemo.com/tm-531-reflux
                     checked=""
                     name="isotope-filter"
                   />
-                  <span>all</span></label
+                  <span>All</span></label
                 >
                 <label
                   ><input
@@ -228,7 +228,7 @@ https://templatemo.com/tm-531-reflux
                     data-type="people"
                     name="isotope-filter"
                   />
-                  <span>people</span></label
+                  <span>Sql</span></label
                 >
                 <label
                   ><input
@@ -236,7 +236,7 @@ https://templatemo.com/tm-531-reflux
                     data-type="nature"
                     name="isotope-filter"
                   />
-                  <span>nature</span></label
+                  <span>Python</span></label
                 >
                 <label
                   ><input
@@ -244,7 +244,23 @@ https://templatemo.com/tm-531-reflux
                     data-type="animals"
                     name="isotope-filter"
                   />
-                  <span>animals</span></label
+                  <span>Excel</span></label
+                >
+                <label
+                  ><input
+                    type="radio"
+                    data-type="animals"
+                    name="isotope-filter"
+                  />
+                  <span>Tableau</span></label
+                >
+                <label
+                  ><input
+                    type="radio"
+                    data-type="animals"
+                    name="isotope-filter"
+                  />
+                  <span>R</span></label
                 >
               </form>
               <div class="isotope-box">
