--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       rel="stylesheet"
     />
 
-    <title>James Data Analyst</title>
+    <title>James The Analyst</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
