added data for later editing

--- a/index.html
+++ b/index.html
@@ -85,9 +85,42 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>About Me</h2>
             <div class="line-dec"></div>
+            <p>
+              Junior Data Analyst / Data Analyst
+            </p>
+            <p>
+              Collecting data from multiple sources, generate relevant data analysis, and interpreting collected data using various statistical tools at your disposal. Creating dashboards, flowcharts, and graphs that can be shared with stakeholders and teams.
+            </p>
+            <p>
+              Main responsibilities
+
+Ability to understand business requirements in the data context and design data models to convert raw data to meaningful insights.
+Collect, analyze and interpret data that are pertinent to our business and stakeholders.
+Making and preparing thoughtful and insightful dashboards which are interactive and contribute to the decision making
+Excellent interpersonal skills to develop and maintain relationships with various internal and external stakeholders.
+Participating in reviewing, analyzing, and evaluating sales, marketing and administrative user needs.
+Analyzing marketing data and generating reports on customer information, call patterns, and demographics.
+Identifies and collects data sources using specific tools or techniques; inputs them into the organization's information system.
+Assists and participates in data validation and cleaning to ensure the quality and integrity of data.
+Analyzes and extracts key data and information to meet the organization's information system needs and requirements.
+            </p>
+            <p>
+              Requirements of the role
+
+Minimum 1 -2 years of experience in a similar role
+Ability to collect data from multiple sources, generate relevant data for analysis, and to interpret collected data using statistical tools
+Create dashboards, flowcharts, and graphs for team consumption
+University Degree in relevant area
+Fluent in English.
+Have a proven ability to build relationships and communicate with people at all levels.
+Adapt at handling sensitive and confidential situations
+Working experience in any BI is preferable.
+Strong knowledge in any one of sql, Python, Excel Macro etc.
+            </p>
             <span
               >Data Analyst well versed in SQL, Python,R and Tableau</span
             >
+           
           </div>
           <div class="left-image-post">
             <div class="row">
