returned to avatar1 bsc of pixelation issues

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div  width="20px"  class="">
-              <a href="#"><img class="img-thumbnail" width="20px"  src="assets/images/avatar.png" alt="" /></a>
+              <a href="#"><img class="img-thumbnail" width="20px"  src="assets/images/avatar1.png" alt="" /></a>
             </div>
             <div class="author-content">
               <h4>James Ssekitoleko</h4>
