working on "about me scetion"

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@ https://templatemo.com/tm-531-reflux
     <link rel="stylesheet" href="assets/css/templatemo-style.css" />
     <link rel="stylesheet" href="assets/css/owl.css" />
     <link rel="stylesheet" href="assets/css/lightbox.css" />
+    <!-- background animations -->
+          <!-- <script src="three.r134.min.js"></script>
+      <script src="vanta.net.min.js"></script>
+      <script>
+      VANTA.NET({
+        el: "#your-element-selector",
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        minHeight: 200.00,
+        minWidth: 200.00,
+        scale: 1.00,
+        scaleMobile: 1.00
+      })
+      </script> -->
   </head>
 
   <body>
@@ -85,14 +100,16 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>About Me</h2>
             <div class="line-dec"></div>
+      
             <p>
-              Junior Data Analyst / Data Analyst
+              <p> Hi, my name is James</p>
+              I translate data into valuable and comprehensible insights. My goal is to improve results, make the right decisions and save costs.I am experienced in SQL, Excel, R statistical programming, Python, Tablue and Power BI data operations and use data visualization techniques to present the results.
             </p>
             <p>
-              Collecting data from multiple sources, generate relevant data analysis, and interpreting collected data using various statistical tools at your disposal. Creating dashboards, flowcharts, and graphs that can be shared with stakeholders and teams.
+              <!-- Collecting data from multiple sources, generate relevant data analysis, and interpreting collected data using various statistical tools at your disposal. Creating dashboards, flowcharts, and graphs that can be shared with stakeholders and teams. -->
             </p>
             <p>
-              Main responsibilities
+              <!-- Main responsibilities
 
 Ability to understand business requirements in the data context and design data models to convert raw data to meaningful insights.
 Collect, analyze and interpret data that are pertinent to our business and stakeholders.
@@ -102,10 +119,10 @@ Participating in reviewing, analyzing, and evaluating sales, marketing and admin
 Analyzing marketing data and generating reports on customer information, call patterns, and demographics.
 Identifies and collects data sources using specific tools or techniques; inputs them into the organization's information system.
 Assists and participates in data validation and cleaning to ensure the quality and integrity of data.
-Analyzes and extracts key data and information to meet the organization's information system needs and requirements.
+Analyzes and extracts key data and information to meet the organization's information system needs and requirements. -->
             </p>
             <p>
-              Requirements of the role
+              <!-- Requirements of the role
 
 Minimum 1 -2 years of experience in a similar role
 Ability to collect data from multiple sources, generate relevant data for analysis, and to interpret collected data using statistical tools
@@ -115,7 +132,7 @@ Fluent in English.
 Have a proven ability to build relationships and communicate with people at all levels.
 Adapt at handling sensitive and confidential situations
 Working experience in any BI is preferable.
-Strong knowledge in any one of sql, Python, Excel Macro etc.
+Strong knowledge in any one of sql, Python, Excel Macro etc. -->
             </p>
             <span
               >Data Analyst well versed in SQL, Python,R and Tableau</span
@@ -133,15 +150,11 @@ Strong knowledge in any one of sql, Python, Excel Macro etc.
                 <div class="right-text">
                   <h4>Caspstone Case study One</h4>
                   <p>
-                    Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                    sed. Mauris viverra, erat non sagittis gravida, elit dui
-                    mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                    tincidunt quam vitae neque pharetra dignissim eget ut
-                    libero.
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero at amet aspernatur harum saepe voluptatum asperiores autem doloribus, tempore illum fugiat commodi laborum iste, ipsa facilis cum porro quos quia voluptate? Mollitia, dolore iste. Magni veritatis voluptatem error ad delectus natus modi porro doloremque, deserunt tempore obcaecati recusandae ipsum pariatur?
                   </p>
-                  <div class="white-button">
+                  <!-- <div class="white-button">
                     <a href="#">Read More</a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -150,17 +163,13 @@ Strong knowledge in any one of sql, Python, Excel Macro etc.
             <div class="row">
               <div class="col-md-6">
                 <div class="left-text">
-                  <h4>Caspstone Case study Two</h4>
+                  <h4>Strong Programming Background</h4>
                   <p>
-                    Pellentesque habitant morbi tristique senectus et netus et
-                    malesuada fames ac turpis egestas. Vestibulum fermentum
-                    eleifend nibh, vitae sodales elit finibus pretium.
-                    Suspendisse potenti. Ut sollicitudin risus a sollicitudin
-                    semper.
+                    For more than 6years i worked as abackend python software developer using frameworks like Django and flask to develop scalable API's. I worked with Javascript frontend frameworks like React, Vue. This is to show how wide my mind is using modern tools of programming, which comes in handy as adata analyst when you need to elevate your ideas to a certain level. 
                   </p>
-                  <div class="white-button">
+                  <!-- <div class="white-button">
                     <a href="#">Read More</a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="col-md-6">
@@ -222,6 +231,28 @@ Strong knowledge in any one of sql, Python, Excel Macro etc.
               <div class="service-item">
                 <div class="fourth-service-icon service-icon"></div>
                 <h4>Excel Operations</h4>
+                <p>
+                  Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
+                  eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
+                  leo nec felis porttitor.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="service-item">
+                <div class="fourth-service-icon service-icon"></div>
+                <h4>Power BI</h4>
+                <p>
+                  Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
+                  eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
+                  leo nec felis porttitor.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="service-item">
+                <div class="fourth-service-icon service-icon"></div>
+                <h4>Python Programming</h4>
                 <p>
                   Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
                   eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
