working on abt me page

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Caspstone Case study One</h4>
+                  <h4>Data Analysis and Data Analytics</h4>
                   <p>
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero at amet aspernatur harum saepe voluptatum asperiores autem doloribus, tempore illum fugiat commodi laborum iste, ipsa facilis cum porro quos quia voluptate? Mollitia, dolore iste. Magni veritatis voluptatem error ad delectus natus modi porro doloremque, deserunt tempore obcaecati recusandae ipsum pariatur?
+                    I am specialized in analyzing data. Results, trends and recommendations are clearly presented in reports or tools. Get more value from your data with prediction models and machine learning techniques, for example by predicting behavior or targeting the right customer.
                   </p>
                   <!-- <div class="white-button">
                     <a href="#">Read More</a>
@@ -174,7 +174,7 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
               </div>
               <div class="col-md-6">
                 <div class="right-image">
-                  <img src="assets/images/right-image.jpg" alt="" />
+                  <img src="assets/images/web1.jpg" alt="" />
                 </div>
               </div>
             </div>
@@ -221,9 +221,7 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <div class="third-service-icon service-icon"></div>
                 <h4>Tableau</h4>
                 <p>
-                  Integer suscipit condimentum aliquet. Nam quis risus metus.
-                  Nullam faucibus quam eget arcu pretium tincidunt. Nam libero
-                  dui.
+                  I am a Tableau Desktop Certified Professional with extensive knowledge of data visualisation best-practices. I have experience creating interactive tools and static infographics that can be consumed online or in print. Besides Tableau I worked with Power BI.
                 </p>
               </div>
             </div>
