--- a/index.html
+++ b/index.html
@@ -188,9 +188,8 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
             <h2>What I’m good at?</h2>
             <div class="line-dec"></div>
             <span
-              >Curabitur leo felis, rutrum vitae varius eu, malesuada a tortor.
-              Vestibulum congue leo et tellus aliquam, eu viverra nulla semper.
-              Nullam eu faucibus diam. Donec eget massa ante.</span
+              >
+              Collection, processing, analysing and presenting data - from supporting everyday business decisions to driving global change</span
             >
           </div>
           <div class="row">
@@ -218,7 +217,7 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
             </div>
             <div class="col-md-6">
               <div class="service-item">
-                <div class="third-service-icon service-icon"></div>
+                <div class="fourth-service-icon service-icon"></div>
                 <h4>Tableau</h4>
                 <p>
                   I am a Tableau Desktop Certified Professional with extensive knowledge of data visualisation best-practices. I have experience creating interactive tools and static infographics that can be consumed online or in print. Besides Tableau I worked with Power BI.
@@ -227,12 +226,10 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
             </div>
             <div class="col-md-6">
               <div class="service-item">
-                <div class="fourth-service-icon service-icon"></div>
+                <div class="second-service-icon service-icon"></div>
                 <h4>Excel Operations</h4>
                 <p>
-                  Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
-                  eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
-                  leo nec felis porttitor.
+                  I am a Tableau Desktop Certified Professional with extensive knowledge of data visualisation best-practices. I have experience creating interactive tools and static infographics that can be consumed online or in print. Besides Tableau I worked with Power BI.
                 </p>
               </div>
             </div>
@@ -241,20 +238,16 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <div class="fourth-service-icon service-icon"></div>
                 <h4>Power BI</h4>
                 <p>
-                  Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
-                  eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
-                  leo nec felis porttitor.
+                  I am a Tableau Desktop Certified Professional with extensive knowledge of data visualisation best-practices. I have experience creating interactive tools and static infographics that can be consumed online or in print. Besides Tableau I worked with Power BI.
                 </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
-                <div class="fourth-service-icon service-icon"></div>
+                <div class="second-service-icon service-icon"></div>
                 <h4>Python Programming</h4>
                 <p>
-                  Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
-                  eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
-                  leo nec felis porttitor.
+                  I am a Tableau Desktop Certified Professional with extensive knowledge of data visualisation best-practices. I have experience creating interactive tools and static infographics that can be consumed online or in print. Besides Tableau I worked with Power BI.
                 </p>
               </div>
             </div>
