about  to finish

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ https://templatemo.com/tm-531-reflux
       
             <p>
               <p> Hi, my name is James</p>
+              Am a Certified professional data anaylst. I take complex bussiness problems/ideas and draw insightful and compelling matrix to guide bussiness decision.
               I translate data into valuable and comprehensible insights. My goal is to improve results, make the right decisions and save costs.I am experienced in SQL, Excel, R statistical programming, Python, Tablue and Power BI data operations and use data visualization techniques to present the results.
             </p>
             <p>
@@ -134,9 +135,6 @@ Adapt at handling sensitive and confidential situations
 Working experience in any BI is preferable.
 Strong knowledge in any one of sql, Python, Excel Macro etc. -->
             </p>
-            <span
-              >Data Analyst well versed in SQL, Python,R and Tableau</span
-            >
            
           </div>
           <div class="left-image-post">
@@ -150,7 +148,7 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <div class="right-text">
                   <h4>Data Analysis and Data Analytics</h4>
                   <p>
-                    I am specialized in analyzing data. Results, trends and recommendations are clearly presented in reports or tools. Get more value from your data with prediction models and machine learning techniques, for example by predicting behavior or targeting the right customer.
+                    I am specialized in analyzing data. Results, trends and recommendations are clearly presented in modern reporting formats. I draw more value from through forecasting techniques for example by predicting behavior or targeting the right customer.
                   </p>
                   <!-- <div class="white-button">
                     <a href="#">Read More</a>
@@ -189,7 +187,7 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
             <div class="line-dec"></div>
             <span
               >
-              Collection, processing, analysing and presenting data - from supporting everyday business decisions to driving global change</span
+              Collection, processing, analysing and presenting data - for supporting everyday business decisions to driving global change</span
             >
           </div>
           <div class="row">
@@ -305,7 +303,7 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <label
                   ><input
                     type="radio"
-                    data-type="animals"
+                    data-type="people"
                     name="isotope-filter"
                   />
                   <span>Tableau</span></label
@@ -313,7 +311,7 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <label
                   ><input
                     type="radio"
-                    data-type="animals"
+                    data-type="nature"
                     name="isotope-filter"
                   />
                   <span>R</span></label
@@ -323,12 +321,12 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-01.jpg"
+                      src="assets/images/port1.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-01.jpg"
+                        href="assets/images/port1.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -342,12 +340,12 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-02.jpg"
+                      src="assets/images/port2.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-02.jpg"
+                        href="assets/images/port2.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -361,12 +359,12 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-03.jpg"
+                      src="assets/images/port5.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-03.jpg"
+                        href="assets/images/port5.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -380,12 +378,12 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-04.jpg"
+                      src="assets/images/port4.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-04.jpg"
+                        href="assets/images/port4.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -399,12 +397,12 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-05.jpg"
+                      src="assets/images/port5.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-05.jpg"
+                        href="assets/images/port5.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -418,12 +416,12 @@ Strong knowledge in any one of sql, Python, Excel Macro etc. -->
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-06.jpg"
+                      src="assets/images/port2.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-06.jpg"
+                        href="assets/images/port2.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
