--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div  width="20px"  class="">
-              <a href="#"><img class="img-thumbnail" width="20px"  src="assets/images/avatar1.png" alt="" /></a>
+              <a href="index.html"><img class="img-thumbnail" width="20px"  src="assets/images/avatar1.png" alt="" /></a>
             </div>
             <div class="author-content">
               <h4>James Ssekitoleko</h4>
-              <span>Data analyst</span>
+              <span>Data Analyst</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
